# FoosballAi

./: CMakeLists.txt  CumMatrix.h  Evolution.h  EvolutionUtil.h  Kicker.cpp  Kicker.h  KickerStrat.cpp  README.md  main.cpp
apps/: CMakeLists.txt  main.cpp
include/: Ball.h  ConstrainedPosition.h  CumMatrix.h  DefensiveStrat.h  Evolution.h  EvolutionUtil.h  Figure.h  FoosballField.h  FoosballMeasures.h  Kicker.h  KickerStrat.h  OffensiveStrat.h  Point.h  Rod.h  Shot.h  StratCommon.h
src/: Ball.cpp  CMakeLists.txt  ConstrainedPosition.cpp  DefensiveStrat.cpp  Figure.cpp  FoosballField.cpp  Kicker.cpp  KickerStrat.cpp  OffensiveStrat.cpp  Point.cpp  Rod.cpp  Shot.cpp  StratCommon.cpp
tests/: CMakeLists.txt  testFoosballField.cpp
